@@ -8,36 +8,24 @@ import com.atlassian.jira.plugins.slack.model.event.PluginEvent;
 import com.atlassian.jira.plugins.slack.service.mentions.IssueMentionService;
 import com.atlassian.jira.plugins.slack.service.notification.EventRenderer;
 import com.atlassian.jira.plugins.slack.service.notification.NotificationInfo;
-import com.atlassian.plugins.slack.api.SlackLink;
 import com.atlassian.plugins.slack.api.client.RetryLoaderHelper;
-import com.atlassian.plugins.slack.api.client.SlackClient;
 import com.atlassian.plugins.slack.api.client.SlackClientProvider;
 import com.atlassian.plugins.slack.user.SlackUserManager;
 import com.atlassian.plugins.slack.util.AsyncExecutor;
-import com.github.seratch.jslack.api.model.Conversation;
+import org.apache.commons.lang3.builder.EqualsBuilder;
 import org.apache.commons.lang3.tuple.Pair;
-import org.junit.Rule;
+import org.junit.Before;
 import org.junit.Test;
 import org.junit.runner.RunWith;
-import org.mockito.InjectMocks;
 import org.mockito.Mock;
-import org.mockito.junit.MockitoJUnit;
-import org.mockito.junit.MockitoRule;
-import org.powermock.api.mockito.PowerMockito;
-import org.powermock.core.classloader.annotations.PowerMockIgnore;
-import org.powermock.core.classloader.annotations.PrepareForTest;
-import org.powermock.modules.junit4.PowerMockRunner;
+import org.mockito.junit.MockitoJUnitRunner;
 
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.List;
 
-import static org.hamcrest.Matchers.sameInstance;
-import static org.junit.Assert.assertThat;
+import static org.junit.Assert.assertTrue;
 
-@PrepareForTest({DefaultTaskBuilder.class, SendNotificationTask.class})
-@PowerMockIgnore({"javax.*", "org.xml.*", "org.w3c.*"})
-@RunWith(PowerMockRunner.class)
+@RunWith(MockitoJUnitRunner.class)
 public class DefaultTaskBuilderTest {
     @Mock
     private IssueMentionService issueMentionService;
@@ -59,93 +47,74 @@ public class DefaultTaskBuilderTest {
     @Mock
     private Issue issue;
     @Mock
-    private Conversation conversation;
-    @Mock
-    private SlackLink link;
-    @Mock
-    private SlackClient client;
-    @Mock
     private SlackIncomingMessage slackMessage;
     @Mock
     private SlackDeletedMessage deletedMessage;
-    @Mock
-    private SendNotificationTask sendNotificationTask;
-    @Mock
-    private ProcessIssueMentionTask processIssueMentionTask;
-    @Mock
-    private ProcessMessageDeletedTask processMessageDeletedTask;
-    @Mock
-    private UnfurlIssueLinksTask unfurlIssueLinksTask;
-    @Mock
-    private DirectMessageTask directMessageTask;
 
-    @Rule
-    public MockitoRule mockitoRule = MockitoJUnit.rule();
-
-    @InjectMocks
     private DefaultTaskBuilder target;
 
-    @Test
-    public void newSendNotificationTask_withList() throws Exception {
-        PowerMockito.whenNew(SendNotificationTask.class).withArguments(eventRenderer, asyncExecutor, slackClientProvider,
-                retryLoaderHelper, event, Collections.singletonList(notificationInfo)
-        ).thenReturn(sendNotificationTask);
-
-        SendNotificationTask result = target.newSendNotificationTask(event, Collections.singletonList(notificationInfo), asyncExecutor);
-
-        assertThat(result, sameInstance(sendNotificationTask));
+    @Before
+    public void setUp() {
+        target = new DefaultTaskBuilder(issueMentionService, eventRenderer, slackClientProvider, retryLoaderHelper, slackUserManager);
     }
 
     @Test
-    public void newSendNotificationTask_singleItem() throws Exception {
-        PowerMockito.whenNew(SendNotificationTask.class).withArguments(eventRenderer, asyncExecutor, slackClientProvider,
-                retryLoaderHelper, event, Collections.singletonList(notificationInfo)
-        ).thenReturn(sendNotificationTask);
+    public void newSendNotificationTask_withList() {
+        List<NotificationInfo> notificationInfos = List.of(notificationInfo);
 
+        SendNotificationTask result = target.newSendNotificationTask(event, notificationInfos, asyncExecutor);
+
+        SendNotificationTask expected = new SendNotificationTask(eventRenderer, asyncExecutor, slackClientProvider, retryLoaderHelper, event,
+                notificationInfos);
+
+        assertTrue(EqualsBuilder.reflectionEquals(result, expected));
+    }
+
+    @Test
+    public void newSendNotificationTask_singleItem() {
         SendNotificationTask result = target.newSendNotificationTask(event, notificationInfo, asyncExecutor);
 
-        assertThat(result, sameInstance(sendNotificationTask));
+        SendNotificationTask expected = new SendNotificationTask(eventRenderer, asyncExecutor, slackClientProvider, retryLoaderHelper, event,
+                List.of(notificationInfo));
+
+        assertTrue(EqualsBuilder.reflectionEquals(result, expected));
     }
 
     @Test
-    public void newProcessIssueMentionTask() throws Exception {
-        PowerMockito.whenNew(ProcessIssueMentionTask.class).withArguments(issueMentionService, issue, slackMessage)
-                .thenReturn(processIssueMentionTask);
-
+    public void newProcessIssueMentionTask() {
         ProcessIssueMentionTask result = target.newProcessIssueMentionTask(issue, slackMessage);
 
-        assertThat(result, sameInstance(processIssueMentionTask));
+        ProcessIssueMentionTask expected = new ProcessIssueMentionTask(issueMentionService, issue, slackMessage);
+
+        assertTrue(EqualsBuilder.reflectionEquals(result, expected));
     }
 
     @Test
-    public void newProcessMessageDeletionTask() throws Exception {
-        PowerMockito.whenNew(ProcessMessageDeletedTask.class).withArguments(issueMentionService, deletedMessage)
-                .thenReturn(processMessageDeletedTask);
-
+    public void newProcessMessageDeletionTask() {
         ProcessMessageDeletedTask result = target.newProcessMessageDeletionTask(deletedMessage);
 
-        assertThat(result, sameInstance(processMessageDeletedTask));
+        ProcessMessageDeletedTask expected = new ProcessMessageDeletedTask(issueMentionService, deletedMessage);
+
+        assertTrue(EqualsBuilder.reflectionEquals(result, expected));
     }
 
     @Test
-    public void newUnfurlIssueLinksTask() throws Exception {
+    public void newUnfurlIssueLinksTask() {
         List<Pair<JiraCommandEvent, NotificationInfo>> notificationInfos = new ArrayList<>();
-        PowerMockito.whenNew(UnfurlIssueLinksTask.class)
-                .withArguments(eventRenderer, slackClientProvider, slackUserManager, notificationInfos)
-                .thenReturn(unfurlIssueLinksTask);
 
         UnfurlIssueLinksTask result = target.newUnfurlIssueLinksTask(notificationInfos);
 
-        assertThat(result, sameInstance(unfurlIssueLinksTask));
+        UnfurlIssueLinksTask expected = new UnfurlIssueLinksTask(eventRenderer, slackClientProvider, slackUserManager, notificationInfos);
+
+        assertTrue(EqualsBuilder.reflectionEquals(result, expected));
     }
 
     @Test
-    public void newDirectMessageTask() throws Exception {
-        PowerMockito.whenNew(DirectMessageTask.class).withArguments(eventRenderer, slackClientProvider, event, notificationInfo)
-                .thenReturn(directMessageTask);
-
+    public void newDirectMessageTask() {
         DirectMessageTask result = target.newDirectMessageTask(event, notificationInfo);
 
-        assertThat(result, sameInstance(directMessageTask));
+        DirectMessageTask expected = new DirectMessageTask(eventRenderer, slackClientProvider, event, notificationInfo);
+
+        assertTrue(EqualsBuilder.reflectionEquals(result, expected));
     }
 }
